<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <TextView
        android:id="@+id/activity_main_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/activity_main_toolbar"
        android:text="@string/test_me"/>

    <EditText
        android:id="@+id/activity_main_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/activity_main_textview"
        android:layout_margin="24dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_edit_text"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_toolbar_title_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_toolbar_title"/>

        <Button
            android:id="@+id/set_textview_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_textview"/>

    </LinearLayout>

</RelativeLayout>
